# AVB-AudioModules

./: AudioCommon.pc.in  CMakeLists.common.txt  CMakeLists.common_internal.txt  CMakeLists.src_delivery.txt  CMakeLists.txt  README.md
android/: Android.mk  AudioCommon.mk  LibasoundModuleRateSmartX.mk  SmartXAlsaPlugin.mk  TestSupport.mk  Tools.mk  version.h
android/res/: asound.rc
android/test/: Android.mk  AudioLoggingTest.cpp
android/test/res/: asound.conf
private/inc/alsa_smartx_plugin/: IasAlsaSmartXConnector.hpp
private/inc/helper/: version.h.in
private/inc/samplerateconverter/: IasSrcFarrowConfig.hpp  IasSrcFarrowFirFilter.hpp
private/res/: CMakeLists.txt
private/src/alsa_smartx_plugin/: IasAlsaPluginShmConnection.cpp  IasAlsaSmartXConnector.cpp  IasAlsaSmartXPlugin.cpp
private/src/audiobuffer/: IasAudioRingBuffer.cpp  IasAudioRingBufferFactory.cpp  IasAudioRingBufferMirror.cpp  IasAudioRingBufferReal.cpp  IasAudioRingBufferResult.cpp  IasAudioRingBufferTypes.cpp  IasMemoryAllocator.cpp  IasMetaDataFactory.cpp
private/src/common/: IasAlsaTypeConversion.cpp  IasAudioCommonTypes.cpp  IasAudioLogging.cpp  IasCommonVersion.cpp  IasDataProbe.cpp  IasDataProbeHelper.cpp  IasFdSignal.cpp  IasIntProcCondVar.cpp  IasIntProcMutex.cpp
private/src/helper/: IasCopyAudioAreaBuffers.cpp  IasIRunnable.cpp  IasThread.cpp
private/src/samplerateconverter/: IasAlsa.cpp  IasSrcController.cpp  IasSrcFarrow.cpp  IasSrcFarrowFirFilter.cpp  IasSrcWrapper.cpp
private/src/samplerateconverter/coeffSrcFarrow/: IasSrcFarrow_coeff_08000Hz_to_48000Hz.h  IasSrcFarrow_coeff_11025Hz_to_48000Hz.h  IasSrcFarrow_coeff_12000Hz_to_48000Hz.h  IasSrcFarrow_coeff_16000Hz_to_48000Hz.h  IasSrcFarrow_coeff_22050Hz_to_48000Hz.h  IasSrcFarrow_coeff_24000Hz_to_08000Hz.h  IasSrcFarrow_coeff_24000Hz_to_16000Hz.h  IasSrcFarrow_coeff_24000Hz_to_48000Hz.h  IasSrcFarrow_coeff_32000Hz_to_48000Hz.h  IasSrcFarrow_coeff_44100Hz_to_16000Hz.h  IasSrcFarrow_coeff_44100Hz_to_48000Hz.h  IasSrcFarrow_coeff_48000Hz_to_08000Hz.h  IasSrcFarrow_coeff_48000Hz_to_11025Hz.h  IasSrcFarrow_coeff_48000Hz_to_12000Hz.h  IasSrcFarrow_coeff_48000Hz_to_16000Hz.h  IasSrcFarrow_coeff_48000Hz_to_22050Hz.h  IasSrcFarrow_coeff_48000Hz_to_24000Hz.h  IasSrcFarrow_coeff_48000Hz_to_32000Hz.h  IasSrcFarrow_coeff_48000Hz_to_44100Hz.h  IasSrcFarrow_coeff_48000Hz_to_48000Hz.h  IasSrcFarrow_param_08000Hz_to_48000Hz.h  IasSrcFarrow_param_11025Hz_to_48000Hz.h  IasSrcFarrow_param_12000Hz_to_48000Hz.h  IasSrcFarrow_param_16000Hz_to_48000Hz.h  IasSrcFarrow_param_22050Hz_to_48000Hz.h  IasSrcFarrow_param_24000Hz_to_08000Hz.h  IasSrcFarrow_param_24000Hz_to_16000Hz.h  IasSrcFarrow_param_24000Hz_to_48000Hz.h  IasSrcFarrow_param_32000Hz_to_48000Hz.h  IasSrcFarrow_param_44100Hz_to_16000Hz.h  IasSrcFarrow_param_44100Hz_to_48000Hz.h  IasSrcFarrow_param_48000Hz_to_08000Hz.h  IasSrcFarrow_param_48000Hz_to_11025Hz.h  IasSrcFarrow_param_48000Hz_to_12000Hz.h  IasSrcFarrow_param_48000Hz_to_16000Hz.h  IasSrcFarrow_param_48000Hz_to_22050Hz.h  (+4 more)
public/doc/: 02_changes.md  51_configuration.md
public/res/: 50-smartx.conf
(+42 files in other folders)
